CreateOrUpdate the CRDs
Signed-off-by: Sam Barker <sam@quadrocket.co.uk>